tests/NormalTests/paczka1/fuzzy1/61503265.err
Error in line 8: 8cBKaCX6N A593 96,3
Error in line 12: lzX S302 20,2
Error in line 21: Ze7ba09TLjU A67 31,3
Error in line 27: 8cBKaCX6N A593 68,9
Error in line 30: 8cBKaCX6N A67 3,
Error in line 34: qRZ A846 72,3
Error in line 37: Ze7ba09TLjU A593 24,95
Error in line 38: A593 A593 -1,2
